# sllq

./: .travis.yml  CHANGES  README.md  cov.sh  fmt.sh  sllq.c  sllq.h
m4/: ax_sllq.m4
sllqbench/: .gitignore  Makefile.am  autogen.sh  configure.ac  sllqbench.c
sllqbench/test/: Makefile.am  test1.sh  test2.sh
